			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-12-18
	
	* Fix bad return code in db_loop() in datastore_sqlite.c
	  (reported by Sami Farin).

	2005-12-17
	
	* XML documentation cleanups (thanks to Nicholas Kaiser)

	2005-12-06

	* bogofilter.cf.example was updated to reflect the proper default of
	  db_log_autoremove=yes. It previously claimed the default were "off".

1.0.0	2005-11-30

	2005-11-28

	* Minor FAQ updates and correctons.
	* Abort if ar(1) is not available during build.

	2005-11-19

	* bogofilter supports BerkeleyDB 4.4.16. doc/README.db and INSTALL have
	  been updated accordingly.

0.96.6	2005-11-19 - Promoted to Stable Release
	2005-11-11 (a.k.a. 1.0.0-rc6)

	* Fix parsing error after binary attachment.

	2005-11-10

	* Correct charset_default value in bogofilter.cf.example

0.96.5	2005-11-07

	2005-11-04

	* Fix parsing of config file string options.

	* Fix handling of unknown charset name.

0.96.4	2005-10-31

	2005-10-29

	* Removed the BUGS section from the bogofilter man page as
          it's now obsolete.

	2005-10-26

	* The bash-dependent contrib/* scripts were changed so they may now
	  work on regular POSIX compliant sh (NOTE: Solaris has a POSIX sh in
	  /usr/xpg4/bin/sh, Solaris's /bin/sh is unsuitable for bogofilter!)

	* The contrib/ directory is now managed by the top-level Makefile.am,
	  which removes one "make" recursion. This implies that "bogogrep" is
	  now built on the top level rather than in contrib/.

	* Renamed all contrib/ scripts to that their suffix gives a hint what
	  kind of script it is (.pl, .sh).

	* Recognize all image/ types as opaque data that we do not parse,